// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .bb-CheckboxIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2:focus + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  border: 0.1rem solid var(--bb-palette-primary,#000000);
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .bb-CheckboxIcon::before {
  border-color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-10 emotion-0 emotion-1 bb-Box bb-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 bb-Box bb-Label bb-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-CheckboxHiddenInput bb-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-CheckboxIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`composition hook should return with CheckboxField props 1`] = `
Object {
  "aria-describedby": "",
  "aria-invalid": false,
  "aria-required": undefined,
  "children": <React.Fragment>
    <Box
      className="css-hzw9l4 bb-CheckboxHiddenInput"
      id=""
      type="checkbox"
      use="input"
    />
    <Box
      className="css-ajsfpq bb-CheckboxIcon"
    />
  </React.Fragment>,
  "className": "css-1q49kjh css-63it0p css-jwhr8m bb-Box bb-Checkbox",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-CheckboxField"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .bb-CheckboxIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2:focus + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  border: 0.1rem solid var(--bb-palette-primary,#000000);
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .bb-CheckboxIcon::before {
  border-color: var(--bb-palette-gray300,#000000);
}

.emotion-15 {
  color: var(--bb-palette-primary,#000000) !important;
}

<div
  class="emotion-10 emotion-0 emotion-15 test bb-Box bb-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 bb-Box bb-Label bb-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-CheckboxHiddenInput bb-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-CheckboxIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`overrides CheckboxField.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .bb-CheckboxIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2:focus + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  border: 0.1rem solid var(--bb-palette-primary,#000000);
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .bb-CheckboxIcon::before {
  border-color: var(--bb-palette-gray300,#000000);
}

.emotion-13 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-13 emotion-0 emotion-1 bb-Box bb-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 bb-Box bb-Label bb-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-CheckboxHiddenInput bb-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-CheckboxIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should assign a ref via checkboxRef 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .bb-CheckboxIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2:focus + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  border: 0.1rem solid var(--bb-palette-primary,#000000);
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .bb-CheckboxIcon::before {
  border-color: var(--bb-palette-gray300,#000000);
}

<input
  class="emotion-0 emotion-1 emotion-2 bb-CheckboxHiddenInput bb-Box"
  id="FieldWrapper"
  type="checkbox"
/>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .bb-CheckboxIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2:focus + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  border: 0.1rem solid var(--bb-palette-primary,#000000);
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .bb-CheckboxIcon::before {
  border-color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-10 emotion-0 emotion-1 bb-Box bb-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 bb-Box bb-Label bb-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-CheckboxHiddenInput bb-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-CheckboxIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly for danger state 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .bb-CheckboxIcon {
  border-color: var(--bb-palette-danger,#000000);
}

.emotion-2:not(:checked) + .bb-CheckboxIcon {
  box-shadow: var(--bb-palette-dangerTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-2[disabled] + .bb-CheckboxIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2:focus + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  border: 0.1rem solid var(--bb-palette-primary,#000000);
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .bb-CheckboxIcon::before {
  border-color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-10 emotion-0 emotion-1 bb-Box bb-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="true"
      class="emotion-6 emotion-0 emotion-1 emotion-9 bb-Box bb-Label bb-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-CheckboxHiddenInput bb-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-CheckboxIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly for success state 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .bb-CheckboxIcon {
  border-color: var(--bb-palette-success,#000000);
}

.emotion-2:not(:checked) + .bb-CheckboxIcon {
  box-shadow: var(--bb-palette-successTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-2[disabled] + .bb-CheckboxIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2:focus + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  border: 0.1rem solid var(--bb-palette-primary,#000000);
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .bb-CheckboxIcon::before {
  border-color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-10 emotion-0 emotion-1 bb-Box bb-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 bb-Box bb-Label bb-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-CheckboxHiddenInput bb-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-CheckboxIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly for warning state 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .bb-CheckboxIcon {
  border-color: var(--bb-palette-warning,#000000);
}

.emotion-2:not(:checked) + .bb-CheckboxIcon {
  box-shadow: var(--bb-palette-warningTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-2[disabled] + .bb-CheckboxIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2:focus + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  border: 0.1rem solid var(--bb-palette-primary,#000000);
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .bb-CheckboxIcon::before {
  border-color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-10 emotion-0 emotion-1 bb-Box bb-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 bb-Box bb-Label bb-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-CheckboxHiddenInput bb-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-CheckboxIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .bb-CheckboxIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2:focus + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  border: 0.1rem solid var(--bb-palette-primary,#000000);
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .bb-CheckboxIcon::before {
  border-color: var(--bb-palette-gray300,#000000);
}

.emotion-15 {
  background-color: var(--bb-palette-primary,#000000) !important;
}

<div
  class="emotion-10 emotion-0 emotion-15 bb-Box bb-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 bb-Box bb-Label bb-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-CheckboxHiddenInput bb-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-CheckboxIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with a checkboxLabel 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-13.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .bb-CheckboxIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2:focus + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  border: 0.1rem solid var(--bb-palette-primary,#000000);
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .bb-CheckboxIcon::before {
  border-color: var(--bb-palette-gray300,#000000);
}

.emotion-9.emotion-9 {
  font-weight: 400;
}

.emotion-8 {
  margin-left: 0.5rem !important;
}

<div
  class="emotion-14 emotion-0 emotion-1 bb-Box bb-CheckboxField"
>
  <div
    class="emotion-14 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-13 bb-Box bb-Label bb-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-CheckboxHiddenInput bb-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-CheckboxIcon bb-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 bb-CheckboxLabel bb-Box bb-Label"
        for="checkbox"
        id="label"
      >
        Hello world
      </span>
    </label>
  </div>
</div>
`;

exports[`props should render correctly with checked 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .bb-CheckboxIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2:focus + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  border: 0.1rem solid var(--bb-palette-primary,#000000);
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .bb-CheckboxIcon::before {
  border-color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-10 emotion-0 emotion-1 bb-Box bb-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 bb-Box bb-Label bb-Checkbox"
    >
      <input
        checked=""
        class="emotion-0 emotion-1 emotion-2 bb-CheckboxHiddenInput bb-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-CheckboxIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with defaultChecked 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .bb-CheckboxIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2:focus + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  border: 0.1rem solid var(--bb-palette-primary,#000000);
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .bb-CheckboxIcon::before {
  border-color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-10 emotion-0 emotion-1 bb-Box bb-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 bb-Box bb-Label bb-Checkbox"
    >
      <input
        checked=""
        class="emotion-0 emotion-1 emotion-2 bb-CheckboxHiddenInput bb-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-CheckboxIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with disabled 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .bb-CheckboxIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2:focus + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  border: 0.1rem solid var(--bb-palette-primary,#000000);
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .bb-CheckboxIcon::before {
  border-color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-10 emotion-0 emotion-1 bb-Box bb-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 bb-Box bb-Label bb-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-CheckboxHiddenInput bb-Box"
        disabled=""
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-CheckboxIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with indeterminate 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .bb-CheckboxIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2:focus + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  background-color: var(--bb-palette-primary,#000000);
  height: 0.125em;
  width: 0.625em;
  top: calc(50% - 0.0625em);
  left: calc(50% - 0.3125em);
}

.emotion-2[disabled]:checked + .bb-CheckboxIcon::before {
  border-color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-10 emotion-0 emotion-1 bb-Box bb-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 bb-Box bb-Label bb-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-CheckboxHiddenInput bb-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-CheckboxIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with isRequired 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .bb-CheckboxIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2:focus + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  border: 0.1rem solid var(--bb-palette-primary,#000000);
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .bb-CheckboxIcon::before {
  border-color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-10 emotion-0 emotion-1 bb-Box bb-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      aria-required="true"
      class="emotion-6 emotion-0 emotion-1 emotion-9 bb-Box bb-Label bb-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-CheckboxHiddenInput bb-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-CheckboxIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with label 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-17.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-13 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-10 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-10:focus {
  outline: none;
}

.emotion-10[disabled] + .bb-CheckboxIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-10:focus + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-10:not([disabled]):checked + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
}

.emotion-10:checked + .bb-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-10:checked + .bb-CheckboxIcon::before {
  border: 0.1rem solid var(--bb-palette-primary,#000000);
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-10[disabled]:checked + .bb-CheckboxIcon::before {
  border-color: var(--bb-palette-gray300,#000000);
}

.emotion-7 {
  margin-bottom: 0.5rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

<div
  class="emotion-3 emotion-1 emotion-2 bb-Box bb-CheckboxField"
>
  <div
    class="emotion-3 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 bb-Box"
    >
      <div
        class="emotion-1 emotion-5 bb-Box"
      >
        <legend
          class="emotion-0 emotion-1 emotion-2 emotion-3 bb-FieldWrapperLabel bb-Box bb-Label"
        >
          Hello world
        </legend>
      </div>
    </div>
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 emotion-17 bb-Box bb-Label bb-Checkbox"
    >
      <input
        class="emotion-1 emotion-2 emotion-10 bb-CheckboxHiddenInput bb-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-1 emotion-2 emotion-13 bb-CheckboxIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with name 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .bb-CheckboxIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2:focus + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  border: 0.1rem solid var(--bb-palette-primary,#000000);
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .bb-CheckboxIcon::before {
  border-color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-10 emotion-0 emotion-1 bb-Box bb-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 bb-Box bb-Label bb-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-CheckboxHiddenInput bb-Box"
        id="FieldWrapper"
        name="CheckboxFieldRocks"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-CheckboxIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with value 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .bb-CheckboxIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2:focus + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  border: 0.1rem solid var(--bb-palette-primary,#000000);
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .bb-CheckboxIcon::before {
  border-color: var(--bb-palette-gray300,#000000);
}

<div
  class="emotion-10 emotion-0 emotion-1 bb-Box bb-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 bb-Box bb-Label bb-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-CheckboxHiddenInput bb-Box"
        id="FieldWrapper"
        type="checkbox"
        value="CheckboxFieldValue"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-CheckboxIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`theming CheckboxField.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-9.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  -webkit-appearance: none;
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-white900,#000000);
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  min-width: 1em;
  width: 1em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2[disabled] + .bb-CheckboxIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2:focus + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-CheckboxIcon {
  border-color: var(--bb-palette-primary,#000000);
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.emotion-2:checked + .bb-CheckboxIcon::before {
  border: 0.1rem solid var(--bb-palette-primary,#000000);
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.emotion-2[disabled]:checked + .bb-CheckboxIcon::before {
  border-color: var(--bb-palette-gray300,#000000);
}

.emotion-13 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-13 emotion-0 emotion-1 bb-Box bb-CheckboxField"
>
  <div
    class="emotion-10 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="label"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 emotion-9 bb-Box bb-Label bb-Checkbox"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-CheckboxHiddenInput bb-Box"
        id="FieldWrapper"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-CheckboxIcon bb-Box"
      />
    </label>
  </div>
</div>
`;
